tests/overloadedrecflds/should_compile/T23557_aux.hs
{-# LANGUAGE NoFieldSelectors #-}

module T23557_aux where

foo :: Int
foo = 23

data Foo = Foo {
  foo :: Int
}
