tests/overloadedrecflds/should_fail/T23063.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T23063 where
import qualified T23063_aux as A

baz = _ :: A.S -> Int
